--- a/techbikers/static/less/layout.less
+++ b/techbikers/static/less/layout.less
@@ -95,9 +95,11 @@
   background: url('/static/img/background.jpg');
   background-size: cover;
   padding: 100px 0;
+  color: white;
 
   // Super custom stuff, needs to be broken out.
   .strapline {
+    text-shadow: 0px 0px 2px black;
     text-transform: uppercase;
     font-weight: bold;
     text-align: center;
@@ -134,5 +136,16 @@
     margin-top: 14px;
     font-size: 24px;
     line-height: 1.3;
+  }
+
+  .btn {
+    border-color: rgba(255, 255, 255, .8);
+    color: rgba(255, 255, 255, .8);
+
+    &:hover {
+      border-color: white;
+      background: white;
+      color: @fontColor;
+    }
   }
 }
